layer.conf: add scarthgap to LAYERSERIES_COMPAT
Signed-off-by: He Yong <hyyoxhk@163.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,6 +9,6 @@ BBFILE_COLLECTIONS += "fcitx"
 BBFILE_PATTERN_fcitx := "^${LAYERDIR}/"
 BBFILE_PRIORITY_fcitx = "6"
 
-LAYERSERIES_COMPAT_fcitx = "kirkstone"
+LAYERSERIES_COMPAT_fcitx = "scarthgap"
 
 LAYERDEPENDS_fcitx = "openembedded-layer"
